# oss-version

./: .gitignore  README.md  SKILL.md  components.toml  pyproject.toml
examples/: my-dev-tools.toml
oss_version/: __init__.py
presets/: dev-tools.toml  go-dev.toml  node-dev.toml  python-dev.toml  rust-dev.toml
scripts/: oss-version.py
tests/: test_oss_version.py
